tests/paczka1/fuzzy1/48551479.err
Error in line 3: hOsw A564 18,0
Error in line 11: 5GDYurOk A564 55,4
Error in line 15: 0XaXhO S732 28,0
Error in line 12: P7YWpXdAwW S732 4,7
Error in line 26: xCux5DMS S732 53,9
Error in line 31: S732 S860 50,0
Error in line 33: S732 S732 63,6
Error in line 29: xCux5DMS A564 29,0
